--- a/locales/de.json
+++ b/locales/de.json
@@ -408,15 +408,15 @@
       "loading_logs": "Logs werden geladen..."
     },
     "placeholders": {
-      "discord_token": "MTQyNTkwNTREXAMPLE.GHh1xM.EXAMPLE_TOKEN_HERE",
+      "discord_token": "MTQyNTkwNTREXAMPLE.GHh1xM.EXAMPLE_xxxx_xxxx",
       "bot_id": "1455304670023657132",
       "jellyseerr_url": "http://localhost:5055",
-      "jellyseerr_api_key": "EXAMPLE_API_KEY_HERE_123456789012",
-      "tmdb_api_key": "example123456789abcdef12345678",
-      "omdb_api_key": "example12",
+      "jellyseerr_api_key": "EXAMPLE_API_KEY_xxxx_xxxx",
+      "tmdb_api_key": "example_xxxx_xxxx",
+      "omdb_api_key": "example_xx",
       "jellyfin_base_url": "http://jellyfin.yourdomain.com | http://192.168.1.1:8096",
-      "jellyfin_api_key": "example123456789abcdef12345678",
-      "jellyfin_server_id": "example1507dcd594b404a8e668ba38f8eaa0c",
+      "jellyfin_api_key": "example_xxxx_xxxx",
+      "jellyfin_server_id": "example_xxxx_xxxx",
       "search_discord_users": "Discord-Benutzer suchen...",
       "search_jellyseerr_users": "Jellyseerr-Benutzer suchen..."
     },
