--- a/locales/de.json
+++ b/locales/de.json
@@ -86,13 +86,13 @@
     "jellyseerr_api_key_help": "Dein API-Schlüssel aus den Jellyseerr-Einstellungen",
     "test_connection": "Verbindung testen",
     "tmdb_api_key": "TMDB API-Schlüssel",
-    "tmdb_api_key_help": "Ein <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">TMDB API-Schlüssel</a> ist erforderlich für die Suche und das Abrufen von Film-/Serien-Details. Zu finden auf der <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">API-Einstellungsseite deines TMDB-Kontos</a> nach der Anmeldung.",
+    "tmdb_api_key_help": "Ein <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">TMDB API-Schlüssel</a> ist erforderlich für die Suche und das Abrufen von Film-/Serien-Details. Du findest ihn auf der <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">API-Einstellungsseite deines TMDB-Kontos</a> nach der Anmeldung.",
     "omdb_api_key": "OMDb API-Schlüssel (Optional)",
-    "omdb_api_key_help": "Optional, aber empfohlen für reichere Daten wie Bewertungen und Regisseure. Erstelle einen auf der <a href=\"https://www.omdbapi.com/apikey.aspx\" target=\"_blank\" rel=\"noopener noreferrer\">API-Schlüssel-Seite von OMDb</a>.",
+    "omdb_api_key_help": "Optional, aber empfohlen für reichere Daten wie Bewertungen und Regisseure. Du kannst einen auf der <a href=\"https://www.omdbapi.com/apikey.aspx\" target=\"_blank\" rel=\"noopener noreferrer\">API-Schlüssel-Seite von OMDb</a> erstellen.",
     "jellyfin_url": "Jellyfin öffentliche URL",
     "jellyfin_url_help": "Die öffentliche URL deines Jellyfin-Servers. Wird für den \"Jetzt ansehen\"-Button verwendet.",
     "jellyfin_api_key": "Jellyfin API-Schlüssel", 
-    "jellyfin_api_key_help": "API-Schlüssel für deinen Jellyfin-Server. Erstelle einen im Jellyfin Dashboard → Administration → API-Schlüssel. Erforderlich für das Laden von Bibliotheken und erweiterte Funktionen.",
+    "jellyfin_api_key_help": "API-Schlüssel für deinen Jellyfin-Server. Du kannst einen im Jellyfin Dashboard → Administration → API-Schlüssel erstellen. Dies ist erforderlich für das Laden von Bibliotheken und erweiterte Funktionen.",
     "test_endpoint": "Endpunkt testen",
     "test_endpoint_help": "Das erfolgreiche Testen des Endpunkts füllt automatisch das Feld Jellyfin Server-ID aus.",
     "jellyfin_server_id": "Jellyfin Server-ID",
@@ -276,7 +276,7 @@
   "jellyfin_webhook": {
     "note": "Hinweis: Wenn du Anchorr in Docker ausführst, musst du möglicherweise localhost durch die IP-Adresse deines Servers ersetzen.",
     "plugin_install": "Falls du das Plugin nicht installiert hast, gehe zur Plugins-Seite in deinem Jellyfin Dashboard, suche nach Webhook, installiere es und starte den Server neu.",
-    "plugin_setup": "Nach dem Neustart gehe zu deinen Webhook-Plugin-Einstellungen und Discord-Ziel hinzufügen.",
+    "plugin_setup": "Nach dem Neustart gehe zu deinen Webhook-Plugin-Einstellungen und füge ein Discord-Ziel hinzu.",
     "step_server_url": "Vervollständige die Server-URL mit der Basis-URL deines Jellyfin-Servers.",
     "step_webhook_url": "Füge die zuvor angegebene URL in das Webhook-URL-Feld ein.",
     "step_status": "Status muss Aktiviert sein.",
