episodes channel mapping

--- a/locales/de.json
+++ b/locales/de.json
@@ -78,6 +78,11 @@
     "loading_servers": "Lade Server...",
     "discord_server_help": "Wähle den Discord-Server aus, auf dem der Bot arbeiten soll. Stelle sicher, dass du den Bot zuerst zu deinem Server hinzugefügt hast.",
     "default_channel": "Standard-Benachrichtigungskanal",
+    "episode_channel": "Episoden-Benachrichtigungskanal (Optional)",
+    "episode_channel_help": "Optional: Wähle einen anderen Kanal speziell für Episoden-Benachrichtigungen. Leer lassen, um den Standardkanal zu verwenden.",
+    "season_channel": "Staffel-Benachrichtigungskanal (Optional)",
+    "season_channel_help": "Optional: Wähle einen anderen Kanal speziell für Staffel-Benachrichtigungen. Leer lassen, um den Standardkanal zu verwenden.",
+    "use_default_channel": "Standardkanal verwenden",
     "select_server_first": "Wähle zuerst einen Server aus...",
     "default_channel_help": "Wähle den Standard-Discord-Kanal für Jellyfin-Benachrichtigungen aus. Du kannst dies pro Bibliothek in Schritt 4 überschreiben. Wähle zuerst einen Server aus.",
     "jellyseerr_url": "Jellyseerr URL",
