--- a/locales/en.json
+++ b/locales/en.json
@@ -78,6 +78,11 @@
     "loading_servers": "Loading servers...",
     "discord_server_help": "Select the Discord server where the bot will operate. Make sure you've added the bot to your server first.",
     "default_channel": "Default Notification Channel",
+    "episode_channel": "Episode Notification Channel (Optional)",
+    "episode_channel_help": "Optional: Choose a different channel specifically for episode notifications. Leave empty to use the default channel.",
+    "season_channel": "Season Notification Channel (Optional)",
+    "season_channel_help": "Optional: Choose a different channel specifically for season notifications. Leave empty to use the default channel.",
+    "use_default_channel": "Use default channel",
     "select_server_first": "Select a server first...",
     "default_channel_help": "Select the default Discord channel for Jellyfin notifications. You can override this per-library in Step 4. Choose a server above first.",
     "jellyseerr_url": "Jellyseerr URL",
