--- a/locales/sv.json
+++ b/locales/sv.json
@@ -2,10 +2,10 @@
   "_meta": {
     "language_name": "Svenska",
     "language_code": "sv",
-    "contributors": ["Simon Eklundh"],
-    "completion": "90%",
-    "last_updated": "2025-12-15",
-    "notes": "used AI for initial translation, dashboard is not great currently. it's pretty much just an initial translations"
+    "contributors": ["Simon Eklundh", "GitHub Copilot"],
+    "completion": "100%",
+    "last_updated": "2025-12-20",
+    "notes": "Complete Swedish translation - all sections translated"
   },
   "common": {
     "yes": "Ja",
@@ -47,17 +47,17 @@
   "config": {
     "title": "Inställningar",
     "general_settings": "Allmänna inställningar",
-    "discord_section": "Discord",
-    "jellyfin_section": "Jellyfin",
-    "jellyseerr_section": "Jellyseerr",
-    "media_section": "Media",
-    "nav_discord": "Discord",
-    "nav_jellyseerr": "Jellyseerr",
-    "nav_media": "Media",
-    "nav_jellyfin": "Jellyfin",
-    "nav_mappings": "Kartläggningar",
-    "nav_roles": "Roller",
-    "nav_misc": "Övrigt",
+    "discord_section": "Discord inställningar",
+    "jellyfin_section": "Jellyfin notifieringsinställningar",
+    "jellyseerr_section": "Jellyseerr inställningar",
+    "media_section": "Mediedatabas inställningar",
+    "nav_discord": "1. Discord",
+    "nav_jellyseerr": "2. Jellyseerr",
+    "nav_media": "3. Mediedatabaser",
+    "nav_jellyfin": "4. Jellyfin notifieringar",
+    "nav_mappings": "5. Användarmappning",
+    "nav_roles": "6. Rollbehörigheter",
+    "nav_misc": "7. Diverse",
     "start_bot": "Starta bot",
     "language": "Språk",
     "language_help": "Välj språk för gränssnittet",
@@ -77,9 +77,14 @@
     "discord_server": "Discord-server",
     "loading_servers": "Laddar servrar...",
     "discord_server_help": "Välj server för boten",
-    "default_channel": "Standardkanal",
-    "select_server_first": "Välj server först",
-    "default_channel_help": "Välj standardkanal för boten",
+    "default_channel": "Standardkanal för notifieringar",
+    "episode_channel": "Avsnittkanal (Valfritt)",
+    "episode_channel_help": "Valfritt: Välj en annan kanal specifikt för avsnittnotiser. Lämna tom för att använda standardkanalen.",
+    "season_channel": "Säsongskanal (Valfritt)",
+    "season_channel_help": "Valfritt: Välj en annan kanal specifikt för säsongsnotiser. Lämna tom för att använda standardkanalen.",
+    "use_default_channel": "Använd standardkanal",
+    "select_server_first": "Välj server först...",
+    "default_channel_help": "Välj standard Discord-kanal för Jellyfin-notifieringar. Du kan åsidosätta detta per bibliotek i Steg 4. Välj en server ovan först.",
     "jellyseerr_url": "Jellyseerr-URL",
     "jellyseerr_url_help": "Ange Jellyseerr-URL",
     "jellyseerr_api_key": "Jellyseerr API-nyckel",
@@ -171,46 +176,46 @@
     }
   },
   "errors": {
-    "loading_servers": "",
-    "loading_servers_check_token": "",
-    "loading_channels": "",
-    "loading_members": "",
-    "loading_members_bot_running": "",
-    "loading_logs": "",
-    "bot_must_be_running": "",
-    "no_roles_available": ""
+    "loading_servers": "Fel vid laddning av servrar",
+    "loading_servers_check_token": "Fel vid laddning av servrar. Kontrollera token.",
+    "loading_channels": "Fel vid laddning av kanaler",
+    "loading_members": "Fel vid laddning av medlemmar",
+    "loading_members_bot_running": "Fel vid laddning av medlemmar. Körs boten?",
+    "loading_logs": "Fel vid laddning av loggar",
+    "bot_must_be_running": "Boten måste köras för att ladda roller",
+    "no_roles_available": "Inga roller tillgängliga"
   },
   "modals": {
-    "start_bot_yes": "",
-    "start_bot_no": ""
+    "start_bot_yes": "Ja, starta bot",
+    "start_bot_no": "Nej, spara bara"
   },
   "about": {
-    "title": "",
-    "description": "",
-    "features_title": "",
-    "feature_search": "",
-    "feature_request": "",
-    "feature_notifications": "",
-    "feature_databases": "",
-    "feature_permissions": "",
-    "feature_direct_messages": "",
-    "support_title": "",
-    "support_description": "",
-    "contribute_title": "",
-    "contribute_description": "",
-    "buy_coffee": "",
-    "view_github": ""
+    "title": "Om Anchorr",
+    "description": "Anchorr är en självhostad, lättviktig brygga som kopplar din Jellyfin-mediaserver med Discord. Den meddelar dig på en dedikerad kanal när nya media läggs till i ditt bibliotek, och med Jellyseerr-integration kan du söka efter och begära filmer och serier direkt från Discord.",
+    "features_title": "Funktioner",
+    "feature_search": "/search <titel> Sök efter en film eller serie med automatiska förslag. En embed med detaljerad information visas, från vilken du kan begära media. För TV-serier har du möjlighet att välja önskade säsonger för begäran.",
+    "feature_request": "/request <titel> Skicka omedelbart en begäran om din valda film eller serie direkt till Jellyseerr. För TV-serier begär detta automatiskt alla säsonger.",
+    "feature_notifications": "Ta emot vackert formaterade notifieringar på din valda Discord-kanal när nya media läggs till i ditt Jellyfin-bibliotek.",
+    "feature_databases": "Med hjälp av TMDB- och OMDb-databaserna får Discord-meddelanden ett vackert och välstrukturerat utseende med viktig information om begärt eller tillagt mediainnehåll.",
+    "feature_permissions": "Kontrollera behörigheter med rollbaserad åtkomst (tillåt-/blockeringslista), dirigera notifieringar till olika kanaler per Jellyfin-bibliotek och länka användare till Jellyseerr-konton för korrekt spårning av begäranden.",
+    "feature_direct_messages": "Få direktmeddelanden på Discord när begärt innehåll blir tillgängligt i ditt bibliotek. Missa aldrig när dina begäranden är klara!",
+    "support_title": "Stöd projektet",
+    "support_description": "Om du tycker att Anchorr är användbart, överväg att stödja dess utveckling. Varje kaffe hjälper till att driva sena nätters kodningssessioner!",
+    "contribute_title": "Bidra",
+    "contribute_description": "Anchorr är öppen källkod! Om du är utvecklare är dina bidrag välkomna. Kolla in projektet på GitHub för att komma igång.",
+    "buy_coffee": "Bjud mig på ett kaffe",
+    "view_github": "Visa på GitHub"
   },
   "jellyfin_webhook": {
-    "note": "",
-    "plugin_install": "",
-    "plugin_setup": "",
-    "step_server_url": "",
-    "step_webhook_url": "",
-    "step_status": "",
-    "step_notification_type": "",
-    "step_item_type": "",
-    "step_properties": "",
-    "step_save": ""
+    "note": "Om du kör Anchorr i Docker kan du behöva ersätta localhost med din servers IP-adress.",
+    "plugin_install": "Om du inte har pluginet installerat, gå till Plugins-sidan i din Jellyfin Dashboard, sök efter Webhook, installera det och starta om servern.",
+    "plugin_setup": "Efter omstarten, gå till dina Webhook-plugininställningar och Lägg till Discord-destination.",
+    "step_server_url": "Fyll i Server-URL med din Jellyfin-servers bas-URL.",
+    "step_webhook_url": "Infoga den tidigare angivna URL:en i Webhook-URL-fältet.",
+    "step_status": "Status måste vara Aktiverad.",
+    "step_notification_type": "För Notifieringstyp aktivera Objekt tillagt.",
+    "step_item_type": "För Objekttyp välj önskat innehåll du vill få notifieringar för.",
+    "step_properties": "Aktivera Skicka alla egenskaper.",
+    "step_save": "Spara."
   }
 }
