Update Swedish localization in sv.json
Updated Swedish localization strings for errors, modals, about section, and webhook setup instructions.

Co-authored-by: Simon Eklundh <simon@eklundh.se>

--- a/locales/sv.json
+++ b/locales/sv.json
@@ -4,8 +4,8 @@
     "language_code": "sv",
     "contributors": ["Simon Eklundh", "GitHub Copilot"],
     "completion": "100%",
-    "last_updated": "2025-12-20",
-    "notes": "Complete Swedish translation - all sections translated"
+    "last_updated": "2025-12-23",
+    "notes": "Complete Swedish translation - all sections translated, merged PR improvements"
   },
   "common": {
     "yes": "Ja",
