--- a/locales/en.json
+++ b/locales/en.json
@@ -90,6 +90,18 @@
     "jellyseerr_api_key": "Jellyseerr API Key",
     "jellyseerr_api_key_help": "Your API key from Jellyseerr settings",
     "test_connection": "Test Connection",
+    "load_profiles_servers": "Load Profiles & Servers",
+    "default_quality_profiles": "Default Quality Profiles (Optional)",
+    "default_quality_profiles_help": "Set default quality profiles and servers for media requests. These will be used when users don't specify a profile via the /request command.",
+    "default_movie_quality": "Default Movie Quality",
+    "default_movie_quality_help": "Quality profile for movie requests (Radarr)",
+    "default_tv_quality": "Default TV Quality",
+    "default_tv_quality_help": "Quality profile for TV show requests (Sonarr)",
+    "default_movie_server": "Default Movie Server",
+    "default_movie_server_help": "Radarr server for movie requests",
+    "default_tv_server": "Default TV Server",
+    "default_tv_server_help": "Sonarr server for TV show requests",
+    "use_jellyseerr_default": "Use Jellyseerr default",
     "tmdb_api_key": "TMDB API Key",
     "tmdb_api_key_help": "A <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">TMDB API Key</a> is required for searching and fetching movie/show details. You can find it in the <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">API settings page of your TMDB account</a> after you log in.",
     "omdb_api_key": "OMDb API Key (Optional)",
