--- a/locales/en.json
+++ b/locales/en.json
@@ -68,11 +68,15 @@
     "discord_instructions_4": "Select scopes: <code>bot</code> and <code>applications.commands</code>",
     "discord_instructions_5": "Select permissions: <code>Send Messages</code> and <code>Embed Links</code>",
     "discord_instructions_6": "Copy the generated URL, open it in your browser, and authorize the bot on your Discord server",
-    "discord_instructions_7": "Come back here and fill in the <strong>Discord Bot Token</strong> and <strong>Bot Client ID</strong> below, then select your server and notification channel from the dropdowns",
+    "discord_instructions_7": "Come back here and fill in the <strong>Discord Bot Token</strong> and <strong>Bot Client ID</strong> below, save your settings, start the bot, and then select your server and notification channel from the dropdowns",
     "discord_token": "Discord Bot Token",
     "discord_token_help": "The secret token of your bot from the <a href=\"https://discord.com/developers/applications\" target=\"_blank\" rel=\"noopener noreferrer\">Discord Developer Portal</a> → Bot → Reset Token",
     "bot_id": "Bot Client ID",
     "bot_id_help": "The application's client ID from the <a href=\"https://discord.com/developers/applications\" target=\"_blank\" rel=\"noopener noreferrer\">Discord Developer Portal</a> → OAuth2 → Client ID",
+    "next_steps_title": "Next Steps",
+    "next_step_1": "Click <strong>Save Settings</strong> button at the bottom of the sidebar",
+    "next_step_2": "Click the <strong>Start Bot</strong> button at the top of the page",
+    "next_step_3": "Once the bot is running, the dropdowns below will automatically populate with your servers and channels",
     "auto_start_info": "<i class=\"bi bi-info-circle-fill\" style=\"margin-right: 0.5rem;\"></i><strong>Auto-Start:</strong> The bot will automatically start when you enter and save Discord credentials for the first time.",
     "discord_server": "Discord Server",
     "loading_servers": "Loading servers...",
@@ -114,6 +118,12 @@
     "test_endpoint_help": "Testing the endpoint successfully will automatically populate the Jellyfin Server ID field.",
     "jellyfin_server_id": "Jellyfin Server ID",
     "jellyfin_server_id_help": "Used for redirecting to the correct path of your Jellyfin server media page when using the \"Watch Now\" button. You can find this in your Jellyfin URL when viewing the page of any movie or show from your library.",
+    "notification_testing_title": "Notification Testing",
+    "notification_testing_help": "Send test notifications to preview how your notification templates look. These will send sample notifications with random movies/series data without requiring actual Jellyfin webhook triggers.",
+    "test_movie_notification": "Test Movie",
+    "test_series_notification": "Test Series",
+    "test_season_notification": "Test Season",
+    "test_episodes_notification": "Test Episodes",
     "save_button": "Save Settings"
   },
   "ui": {
