fix: complete German translations - add 22 missing keys

--- a/locales/de.json
+++ b/locales/de.json
@@ -4,8 +4,8 @@
     "language_code": "de",
     "contributors": ["GitHub Copilot"],
     "completion": "100%",
-    "last_updated": "2025-12-17",
-    "notes": "Vollständige deutsche Übersetzung mit Du-Form - erweitert mit fehlenden Übersetzungen"
+    "last_updated": "2025-12-27",
+    "notes": "Vollständige deutsche Übersetzung mit Du-Form - alle fehlenden Übersetzungen hinzugefügt"
   },
   "common": {
     "yes": "Ja",
@@ -90,6 +90,22 @@
     "jellyseerr_api_key": "Jellyseerr API-Schlüssel",
     "jellyseerr_api_key_help": "Dein API-Schlüssel aus den Jellyseerr-Einstellungen",
     "test_connection": "Verbindung testen",
+    "next_steps_title": "Nächste Schritte",
+    "next_step_1": "Klicke auf den <strong>Einstellungen speichern</strong>-Button unten in der Seitenleiste",
+    "next_step_2": "Klicke auf den <strong>Bot starten</strong>-Button oben auf der Seite",
+    "next_step_3": "Sobald der Bot läuft, werden die Dropdown-Menüs unten automatisch mit deinen Servern und Kanälen gefüllt",
+    "load_profiles_servers": "Profile & Server laden",
+    "default_quality_profiles": "Standard-Qualitätsprofile (Optional)",
+    "default_quality_profiles_help": "Lege Standard-Qualitätsprofile und -Server für Medienanfragen fest. Diese werden verwendet, wenn Benutzer kein Profil über den /request-Befehl angeben.",
+    "default_movie_quality": "Standard-Film-Qualität",
+    "default_movie_quality_help": "Qualitätsprofil für Filmanfragen (Radarr)",
+    "default_tv_quality": "Standard-TV-Qualität",
+    "default_tv_quality_help": "Qualitätsprofil für TV-Serien-Anfragen (Sonarr)",
+    "default_movie_server": "Standard-Film-Server",
+    "default_movie_server_help": "Radarr-Server für Filmanfragen",
+    "default_tv_server": "Standard-TV-Server",
+    "default_tv_server_help": "Sonarr-Server für TV-Serien-Anfragen",
+    "use_jellyseerr_default": "Jellyseerr-Standard verwenden",
     "tmdb_api_key": "TMDB API-Schlüssel",
     "tmdb_api_key_help": "Ein <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">TMDB API-Schlüssel</a> ist erforderlich für die Suche und das Abrufen von Film-/Serien-Details. Du findest ihn auf der <a href=\"https://www.themoviedb.org/settings/api\" target=\"_blank\" rel=\"noopener noreferrer\">API-Einstellungsseite deines TMDB-Kontos</a> nach der Anmeldung.",
     "omdb_api_key": "OMDb API-Schlüssel (Optional)",
@@ -167,6 +183,12 @@
     "remove_mapping": "Zuordnung entfernen",
     "mappings_saved": "Zuordnungen gespeichert!",
     "mappings_error": "Fehler beim Speichern der Zuordnungen",
+    "notification_testing_title": "Benachrichtigungstest",
+    "notification_testing_help": "Sende Test-Benachrichtigungen, um eine Vorschau deiner Benachrichtigungsvorlagen zu erhalten. Diese senden Beispiel-Benachrichtigungen mit zufälligen Film-/Seriendaten, ohne echte Jellyfin-Webhook-Trigger zu benötigen.",
+    "test_movie_notification": "Film testen",
+    "test_series_notification": "Serie testen",
+    "test_season_notification": "Staffel testen",
+    "test_episodes_notification": "Episoden testen",
     "save_button": "Einstellungen speichern",
     "bot_token": "Bot Token",
     "server_id": "Discord Server ID",
