Update German translations

--- a/locales/de.json
+++ b/locales/de.json
@@ -2,7 +2,7 @@
   "_meta": {
     "language_name": "Deutsch",
     "language_code": "de",
-    "contributors": ["GitHub Copilot"],
+    "contributors": ["@retardgerman"],
     "completion": "100%",
     "last_updated": "2025-12-27",
     "notes": "Vollständige deutsche Übersetzung mit Du-Form - alle fehlenden Übersetzungen hinzugefügt"
@@ -48,11 +48,11 @@
     "title": "Konfiguration",
     "general_settings": "Allgemeine Einstellungen",
     "discord_section": "Discord Bot Einstellungen",
-    "jellyfin_section": "Jellyfin Benachrichtigungs-Einstellungen", 
+    "jellyfin_section": "Jellyfin Benachrichtigungs-Einstellungen",
     "jellyseerr_section": "Jellyseerr Einstellungen",
     "media_section": "Media-Datenbank Einstellungen",
     "nav_discord": "1. Discord",
-    "nav_jellyseerr": "2. Jellyseerr", 
+    "nav_jellyseerr": "2. Jellyseerr",
     "nav_media": "3. Media Datenbanken",
     "nav_jellyfin": "4. Jellyfin Benachrichtigungen",
     "nav_mappings": "5. Benutzer-Zuordnung",
@@ -71,7 +71,7 @@
     "discord_instructions_7": "Komme hierher zurück und trage den <strong>Discord Bot Token</strong> und die <strong>Bot Client ID</strong> unten ein, wähle dann deinen Server und Benachrichtigungskanal aus den Dropdown-Menüs aus",
     "discord_token": "Discord Bot Token",
     "discord_token_help": "Das geheime Token deines Bots aus dem <a href=\"https://discord.com/developers/applications\" target=\"_blank\" rel=\"noopener noreferrer\">Discord Developer Portal</a> → Bot → Token zurücksetzen",
-    "bot_id": "Bot Client ID", 
+    "bot_id": "Bot Client ID",
     "bot_id_help": "Die Anwendungs-Client-ID aus dem <a href=\"https://discord.com/developers/applications\" target=\"_blank\" rel=\"noopener noreferrer\">Discord Developer Portal</a> → OAuth2 → Client ID",
     "auto_start_info": "<i class=\"bi bi-info-circle-fill\" style=\"margin-right: 0.5rem;\"></i><strong>Automatischer Start:</strong> Der Bot startet automatisch, wenn du zum ersten Mal Discord-Zugangsdaten eingibst und speicherst.",
     "discord_server": "Discord Server",
@@ -112,7 +112,7 @@
     "omdb_api_key_help": "Optional, aber empfohlen für reichere Daten wie Bewertungen und Regisseure. Du kannst einen auf der <a href=\"https://www.omdbapi.com/apikey.aspx\" target=\"_blank\" rel=\"noopener noreferrer\">API-Schlüssel-Seite von OMDb</a> erstellen.",
     "jellyfin_url": "Jellyfin öffentliche URL",
     "jellyfin_url_help": "Die öffentliche URL deines Jellyfin-Servers. Wird für den \"Jetzt ansehen\"-Button verwendet.",
-    "jellyfin_api_key": "Jellyfin API-Schlüssel", 
+    "jellyfin_api_key": "Jellyfin API-Schlüssel",
     "jellyfin_api_key_help": "API-Schlüssel für deinen Jellyfin-Server. Du kannst einen im Jellyfin Dashboard → Administration → API-Schlüssel erstellen. Dies ist erforderlich für das Laden von Bibliotheken und erweiterte Funktionen.",
     "test_endpoint": "Endpunkt testen",
     "test_endpoint_help": "Das erfolgreiche Testen des Endpunkts füllt automatisch das Feld Jellyfin Server-ID aus.",
@@ -204,7 +204,7 @@
   },
   "footer": {
     "report_bug": "Fehler melden",
-    "logs": "Logs", 
+    "logs": "Logs",
     "made_by": "erstellt von",
     "buy_coffee": "Kauf mir einen Kaffee!"
   },
